# capsule-box

./: Cargo.toml  LICENSE  README.md  init.sh
doc/: README_en.md
doc/tutorial/: 01_IPC_TUTORIAL.md  02_CONTAINER_TUTORIAL.md  03_SANDBOX_TUTORIAL.md  04_INTEGRATION_TUTORIAL.md  05_NETWORK_TUTORIAL.md  06_NAT_TUTORIAL.md  07_BRIDGE_TUTORIAL.md  08_INTERACTIVE_TUTORIAL.md  09_REMOVE_TUTORIAL.md  README.md
src/: error.rs  main.rs
src/container/: mod.rs
src/ipc/: client.rs  protocol.rs  server.rs
src/sandbox/: cgroup.rs  fs.rs  mod.rs  network.rs
src/storage/: mod.rs
